--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.img {
+img {
     background-image: url("Img/loading (1).gif");
     background-repeat: no-repeat;
     background-size: cover;
