--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,23 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-img {
+.card img {
     background-image: url("Img/loading (1).gif");
     background-repeat: no-repeat;
     background-size: cover;
     animation-duration: 5s;
-    animation-name: img;
+    animation-name: imganim;
     animation-direction: reverse;
     opacity: 1;
 }
 
-@keyframes img {
+@keyframes imganim {
    0% {
        opacity: 1;
    }
+   
+   2% {
+       opacity: 0;
 
    100% {
        opacity: 0;
