--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,9 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.card img {
+img {
     background-image: url("Img/loading (1).gif");
-    background-repeat: no-repeat;
-    background-size: cover;
-    animation-duration: 5s;
-    animation-name: imganim;
-    animation-direction: reverse;
-    opacity: 1;
-}
-
-@keyframes imganim {
-   0% {
-       opacity: 1;
-   }
-   
-   2% {
-       opacity: 0;
-
-   100% {
-       opacity: 0;
-   }
+    transition-duration: 5s;
 }
 
 .main {
