--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 img {
     background-image: url("Img/loading.gif");
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 }
 
 .main {
