--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ img {
     background-image: url("Img/loading.gif");
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: black;
 }
 
 .main {
