--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,12 @@
 }
 
 img {
+    position: relative;
     background-image: url("Img/loading.gif");
     background-repeat: no-repeat;
     background-size: cover;
     background-color: black;
+    z-index: 9;
 }
 
 .main {
