--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 img {
     position: relative;
-    background-image: url("Img/loading.gif");
+    background-image: url(Img/loading.gif);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: black;
